--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/saminoorsyed/restaurant-homepage/issues"
   },
-  "homepage": "https://github.com/saminoorsyed/restaurant-homepage#readme"
+  "homepage": "https://github.com/saminoorsyed/restaurant-homepage#readme",
+  "devDependencies": {
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
+  }
 }
